crates/alder-can/src/snapshots/alder_can__module__tests__import_exposing_not_found_op.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing ((+))\n\nx = 1\n"
---
[
    ImportExposingNotFound {
        region: Region {
            start: Position {
                line: 3,
                column: 22,
            },
            end: Position {
                line: 3,
                column: 25,
            },
        },
        module: ModuleName {
            package: None,
            name: "Foo",
        },
        name: "+",
        available: [],
    },
]
