crates/alder-can/src/snapshots/alder_can__module__tests__import_open_alias.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (MyAlias(..))\n\nx = 1\n"
---
[
    ImportOpenAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 30,
            },
            end: Position {
                line: 3,
                column: 32,
            },
        },
        name: "MyAlias",
    },
]
